--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dnb-helper",
+  "name": "dnd-helper",
   "version": "0.0.1",
   "description": "",
   "main": "dist/main.js",
@@ -18,7 +18,8 @@
     "node-html-parser": "^5.3.3",
     "playwright": "^1.22.2",
     "reflect-metadata": "^0.1.13",
-    "user-agents": "^1.0.1080"
+    "user-agents": "^1.0.1080",
+    "yaml": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
