--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@tryfabric/martian": "^1.2.4",
     "@types/user-agents": "^1.0.2",
     "cosmiconfig": "^7.0.1",
+    "immer": "^9.0.15",
     "injection-js": "^2.4.0",
     "node-html-markdown": "^1.2.0",
     "node-html-parser": "^5.3.3",
     "playwright": "^1.22.2",
     "reflect-metadata": "^0.1.13",
     "user-agents": "^1.0.1080",
+    "winston": "^3.8.1",
     "yaml": "^2.1.1"
   },
   "devDependencies": {
