--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@notionhq/client": "^2.0.0",
     "@tryfabric/martian": "^1.2.4",
+    "@types/prettier": "^2.6.3",
     "@types/user-agents": "^1.0.2",
     "cosmiconfig": "^7.0.1",
     "immer": "^9.0.15",
@@ -18,6 +19,7 @@
     "node-html-markdown": "^1.2.0",
     "node-html-parser": "^5.3.3",
     "playwright": "^1.22.2",
+    "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "user-agents": "^1.0.1080",
     "winston": "^3.8.1",
