feat: handle magic items

--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "dependencies": {
     "@notionhq/client": "^2.0.0",
     "@tryfabric/martian": "^1.2.4",
+    "@types/html-minifier": "^4.0.2",
     "@types/prettier": "^2.6.3",
     "@types/user-agents": "^1.0.2",
     "cosmiconfig": "^7.0.1",
+    "html-minifier": "^4.0.0",
     "immer": "^9.0.15",
     "injection-js": "^2.4.0",
     "node-html-markdown": "^1.2.0",
     "node-html-parser": "^5.3.3",
-    "playwright": "^1.22.2",
+    "pdf-lib": "^1.17.1",
+    "playwright": "^1.28.0",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
-    "user-agents": "^1.0.1080",
+    "user-agents": "^1.0.1202",
     "winston": "^3.8.1",
     "yaml": "^2.1.1"
   },
