chore: migrate to oclif

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-cache
-dist
-node_modules
+*-debug.log
+*-error.log
+/.nyc_output
+/dist
+/lib
 .history
+/tmp
+node_modules
+oclif.manifest.json
+vault/
 .DS_Store
 .dnd-parserc.json
 .tmp
 *.code-workspace
 *.log
-vault
+/cache
