--- a/package.json
+++ b/package.json
@@ -1,36 +1,86 @@
 {
-  "name": "dnd-helper",
-  "version": "0.0.1",
-  "description": "",
-  "main": "dist/main.js",
-  "scripts": {
-    "start": "ts-node src/main.ts"
+  "name": "dnd-parser",
+  "version": "0.0.0",
+  "description": "oclif example Hello World CLI",
+  "author": "William Chelman @WilliamChelman",
+  "bin": {
+    "dnd-parser": "./bin/run"
   },
-  "author": "",
+  "homepage": "https://github.com/WilliamChelman/dnd-parser",
   "license": "MIT",
+  "main": "dist/index.js",
+  "repository": "WilliamChelman/dnd-parser",
+  "files": [
+    "/bin",
+    "/dist",
+    "/npm-shrinkwrap.json",
+    "/oclif.manifest.json"
+  ],
   "dependencies": {
-    "@notionhq/client": "^2.0.0",
-    "@tryfabric/martian": "^1.2.4",
-    "@types/html-minifier": "^4.0.2",
-    "@types/prettier": "^2.6.3",
-    "@types/user-agents": "^1.0.2",
-    "cosmiconfig": "^7.0.1",
-    "html-minifier": "^4.0.0",
-    "immer": "^9.0.15",
+    "@oclif/core": "^1.19.1",
+    "@oclif/plugin-help": "^5",
+    "@oclif/plugin-plugins": "^2.1.7",
+    "cosmiconfig": "^8.0.0",
+    "immer": "^9.0.16",
     "injection-js": "^2.4.0",
-    "node-html-markdown": "^1.2.0",
-    "node-html-parser": "^5.3.3",
-    "pdf-lib": "^1.17.1",
+    "node-html-markdown": "^1.2.2",
     "playwright": "^1.28.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "reflect-metadata": "^0.1.13",
-    "user-agents": "^1.0.1202",
-    "winston": "^3.8.1",
-    "yaml": "^2.1.1"
+    "user-agents": "^1.0.1208",
+    "winston": "^3.8.2",
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.35",
+    "@oclif/test": "^2.2.10",
+    "@types/chai": "^4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.18.3",
+    "chai": "^4",
+    "eslint": "^7.32.0",
+    "eslint-config-oclif": "^4",
+    "eslint-config-oclif-typescript": "^1.0.3",
+    "mocha": "^9",
+    "oclif": "^3",
+    "shx": "^0.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.4"
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3"
+  },
+  "oclif": {
+    "bin": "dnd-parser",
+    "dirname": "dnd-parser",
+    "commands": "./dist/commands",
+    "plugins": [
+      "@oclif/plugin-help",
+      "@oclif/plugin-plugins"
+    ],
+    "topicSeparator": " ",
+    "topics": {
+      "hello": {
+        "description": "Say hello to the world and others"
+      }
+    }
+  },
+  "scripts": {
+    "build": "shx rm -rf dist && tsc -b",
+    "lint": "eslint . --ext .ts --config .eslintrc",
+    "postpack": "shx rm -f oclif.manifest.json",
+    "posttest": "yarn lint",
+    "prepack": "yarn build && oclif manifest && oclif readme",
+    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "version": "oclif readme && git add README.md"
+  },
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "bugs": "https://github.com/WilliamChelman/dnd-parser/issues",
+  "keywords": [
+    "oclif"
+  ],
+  "types": "dist/index.d.ts",
+  "volta": {
+    "node": "16.18.1",
+    "npm": "6.14.17"
   }
 }
