feat: ddb-magic-items command

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@oclif/core": "^1.19.1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.7",
+    "@tryfabric/martian": "^1.2.4",
     "cosmiconfig": "^8.0.0",
+    "html-minifier": "^4.0.0",
     "immer": "^9.0.16",
     "injection-js": "^2.4.0",
     "node-html-markdown": "^1.2.2",
@@ -34,8 +36,11 @@
   "devDependencies": {
     "@oclif/test": "^2.2.10",
     "@types/chai": "^4",
+    "@types/html-minifier": "^4.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.18.3",
+    "@types/prettier": "^2.7.1",
+    "@types/user-agents": "^1.0.2",
     "chai": "^4",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4",
