feat: model cleanup and prettier output for sources

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.7",
     "@tryfabric/martian": "^1.2.4",
+    "consola": "^2.15.3",
     "cosmiconfig": "^8.0.0",
+    "defu": "^6.1.1",
     "html-minifier": "^4.0.0",
     "immer": "^9.0.16",
     "injection-js": "^2.4.0",
