--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "playwright": "^1.28.0",
     "prettier": "^2.8.0",
     "reflect-metadata": "^0.1.13",
+    "sanitize-filename": "^1.6.3",
+    "ufo": "^1.0.1",
     "user-agents": "^1.0.1208",
     "winston": "^3.8.2",
     "yaml": "^2.1.3"
