--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.7",
     "@tryfabric/martian": "^1.2.4",
+    "chrome-remote-interface": "^0.31.3",
     "consola": "^2.15.3",
     "cosmiconfig": "^8.0.0",
     "defu": "^6.1.1",
+    "execa": "^5.0.0",
     "html-minifier": "^4.0.0",
     "immer": "^9.0.16",
     "injection-js": "^2.4.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@oclif/test": "^2.2.10",
     "@types/chai": "^4",
+    "@types/chrome-remote-interface": "^0.31.4",
     "@types/html-minifier": "^4.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.18.3",
